<resources>
    <string name="app_name">mymodel</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="registration">Registration</string>
    <string name="click_to_login">Click to Login</string>
    <string name="log_out">Log Out</string>
    <string name="registered_users">Registered Users</string>
    <string name="button_back">button_back</string>

</resources>